--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:text="2022년 04월 14일"
+                android:text="날"
                 android:layout_marginEnd="10dp"/>
 
         </Toolbar>
