뉴스 api data recyclerview adapter

--- a/app/src/main/res/layout/news_recycler_item.xml
+++ b/app/src/main/res/layout/news_recycler_item.xml
@@ -11,6 +11,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraint_url"
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -28,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="title"
-                android:gravity="center"
+                android:gravity="start"
                 android:textSize="30sp"
                 android:layout_margin="5dp"/>
 
@@ -40,6 +41,7 @@
                 android:background="#e5e5e5" />
 
             <TextView
+                android:id="@+id/textView_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -47,6 +49,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -70,5 +73,13 @@
                 android:textSize="20sp"/>
 
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            android:layout_marginTop="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="@id/linearLayout2"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
