--- a/app/src/main/res/layout/news_recycler_item.xml
+++ b/app/src/main/res/layout/news_recycler_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -48,31 +48,26 @@
                 android:text="설명" />
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/textView_author"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="5dp"
+            android:text="저자: "
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            android:layout_margin="5dp">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-            <TextView
-                android:id="@+id/textView_author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="저자: "
-                android:textSize="20sp"/>
-
-            <TextView
-                android:id="@+id/textView_publishedAt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="올린 날짜: "
-                android:textSize="20sp"/>
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/textView_publishedAt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="올린 날짜: "
+            android:textSize="20sp"
+            android:layout_margin="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView_author" />
 
         <View
             android:layout_width="match_parent"
@@ -80,6 +75,6 @@
             android:background="@color/black"
             android:layout_marginTop="40dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="@id/linearLayout2"/>
+            app:layout_constraintTop_toTopOf="@id/textView_publishedAt"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
