--- a/app/src/main/res/drawable/weather_bg1.xml
+++ b/app/src/main/res/drawable/weather_bg1.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/>
+    <solid android:color="#00000000"/>
     <stroke android:color="#e5e5e5" android:width="2dp"/>
     <size android:width="400dp" android:height="250dp"/>
     <corners android:radius="20dp"/>
