--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
             name="weather"
             type="com.example.news.view.WeatherFragment" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -18,7 +19,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/weather_bg1"
             android:layout_margin="15dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -27,6 +28,74 @@
                 android:layout_margin="20dp"
                 android:textSize="20sp" />
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/main_weather_image"
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginStart="35dp"
+                    android:src="@drawable/ic_baseline_wb_cloudy_24"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/main_weather_text_main_temp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="10°C"
+                    android:layout_marginStart="20dp"
+                    android:textSize="30sp"
+                    app:layout_constraintStart_toEndOf="@+id/main_weather_image"
+                    app:layout_constraintTop_toTopOf="@id/main_weather_image" />
+
+                <TextView
+                    android:id="@+id/main_weather_text_feels_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="체감 온도: 10°C"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="@+id/main_weather_text_main_temp"
+                    app:layout_constraintTop_toBottomOf="@+id/main_weather_text_main_temp" />
+
+                <TextView
+                    android:id="@+id/main_weather_text_humidity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="습도: 100%"
+                    app:layout_constraintStart_toStartOf="@+id/main_weather_text_feels_like"
+                    app:layout_constraintTop_toBottomOf="@+id/main_weather_text_feels_like" />
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="15dp"
+                    android:src="@drawable/wind"
+                    android:layout_marginBottom="13dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/main_weather_image"
+                    app:layout_constraintTop_toBottomOf="@+id/main_weather_image" />
+
+                <TextView
+                    android:id="@+id/main_weather_text_wind_speed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3.00ms"
+                    android:layout_marginStart="10dp"
+                    android:textSize="22sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
+                    app:layout_constraintStart_toEndOf="@+id/imageView"
+                    app:layout_constraintTop_toTopOf="@+id/imageView" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
         <TextView
